# prompt-engineering-lawyers

./: .gitignore  CONTRIBUTING.md  Home.py  LICENSE  README.md  auth_helpers.py  custom.css  db.py  helpers.py  main.py  models.py  page_template.py  prompt_widget.py  pyproject.toml  requirements.txt  routes.py  routes_helper.py  settings.py
alembic/: env.py
alembic/versions/: 686d63062722_fix_bug_neeed_a_foreign_key_for_page.py  921b0adda9f6_some_more_tables.py  ae666acb7bd8_updated_page_and_section_models.py
content/pages/: Home.py  a_role_for_the_system.py  about_this_site.py  chat_as_memory.py  completion.py  everything_in_context.py  everything_is_a_remix.py  introduction.py  now_this.py  what_is_prompt_engineering.py
pages/: 1_Let's_Begin.py  2_Transforming_Text.py  3_Generating_Text.py  4_Exploring_Memory_using_Chat.py  5_Taking_Steps.py  6_Now_for_some_serious_Role_Playing.py  7_Can_ChatGPT_think_like_a_lawyer?.py  8_Everything_in_its_right_place.py  Home.py  introduction.py  test.py
test/: test_helpers.py
