[tool.poetry]
name = "prompt-engineering-lawyers"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@lovelawrobots.com>"]
readme = "README.md"
#packages = [{include = "prompt_engineering_lawyers"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
openai = "^1.40.2"
supabase = "^2.6.0"
sqlmodel = "^0.0.21"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
streamlit-url-fragments = "^0.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
alembic = "^1.13.2"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
